# prelink

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in
doc/: Makefile.am  Makefile.in  basemove.fig  bss.fig  dso1.fig  dso2.fig  dso3.fig  execstack.8  gap.fig  glossary.conf  linuxtag.sty  newseg.fig  prelink.8  prelink.conf  prelink.tex  prelinklisting.sty
gelf/: Makefile.am  Makefile.in  gelf.c  gelf.h
gelfx/: Makefile.am  Makefile.in  gelfx.h
gelfx32/: Makefile.in  gelfx.h
m4/: Makefile.am  Makefile.in  libelf.m4
patches/: Makefile.am  Makefile.in  linux-2.4.10.patch
src/: Makefile.am  Makefile.in  arch-alpha.c  arch-arm.c  arch-cris.c  arch-i386.c  arch-ia64.c  arch-mips.c  arch-ppc.c  arch-ppc64.c  arch-s390.c  arch-s390x.c  arch-sh.c  arch-sparc.c  arch-sparc64.c  arch-x86_64.c  cache.c  canonicalize.c  checksum.c  conflict.c  crc32.c  cxx.c  data.c  doit.c  dso.c  dwarf2.c  dwarf2.h  exec.c  execle_open.c  execstack.c  fptr.c  fptr.h  gather.c  get.c  hashtab.c  hashtab.h  layout.c  layout.h  main.c  makecrc.c  (+16 more)
testsuite/: Makefile.am  Makefile.in  cxx1.C  cxx1.h  cxx1.sh  cxx1lib1.C  cxx1lib2.C  cxx2.C  cxx2.sh  cxx3.C  cxx3.h  cxx3.sh  cxx3lib1.C  cxx3lib2.C  cycle1.sh  cycle2.sh  deps1.c  deps1.h  deps1.sh  deps1lib1.c  deps1lib2.c  deps2.sh  deps2lib1.c  functions.sh  ifunc.h  ifunc1.c  ifunc1.sh  ifunc1lib1.c  ifunc1lib2.c  ifunc2.sh  ifunc3.c  ifunc3.sh  ifunc3lib1.c  ifunctest.c  layout1.sh  layout2.sh  movelibs.sh  quick1.c  quick1.sh  quick1lib1.c  (+76 more)
